# psql-test-rust

./: .env  Cargo.toml  README.md
docker-entrypoint-initdb.d/: initdb.sh
migrations/2021-05-22-015435_create_posts/: up.sql
src/: lib.rs
